main.css
body {
    background-image: url("assets/baaaaka.png");
    /* image-rendering: pixelated; */
    background-size: 100px;
    animation: scroll 3s linear infinite;
    font-size: x-large;
    background-attachment: fixed;
}

header{

    align-items: center;
    justify-content: center;
    text-align: center;
}

a{
    color: rgb(0, 119, 255);
    margin: 10px;
}

@keyframes scroll{
    0%{
        background-position: 0 0;
    }
    100%{
        background-position: -100px -200px;
    }
}

.gradient{
    image-rendering:auto;
    background-image: linear-gradient(to bottom,rgba(9, 4, 36, 0.671),rgba(234, 0, 255, 0.13));
    position:fixed;
    top: 0%;
    right: 0%;
    left: 0%;
    bottom: 0%;
    margin: 0;
    padding: 10px;
    z-index: -10;
}

.links{
    display:block;
    font-size: 16px;
    
}

.box{
    background-color: white;
    padding: 10px;
    font-family:monospace;
}

.box2{
    background-color: white;
    padding: 10px;
    font-family:monospace;
    display: block;
    margin: 10px;
    margin-left: 30%;
    margin-right: 30%;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.center{
    display: block;
    align-items: center;
    justify-content: center;
    width: 650px;
    margin: auto;
}

.imagecontainer{
    margin: auto;
    flex-wrap: wrap;
    display: flex;
    align-items: center;
    justify-content: center;
    grid-auto-flow: column ;
}

.img{
    height: 600px;
}

.popin{
    display: none;
    background-color: white;
    font-family:monospace;
    width: 100%;
    height: 10%;
    top: -101%;
    position: relative;
}

.bottomPopin{
    width: 100%;
    height: 15%;
    position: relative;
    background-color: rgb(0, 119, 255);
    top: 50%
}

.openbox{
    background-color: white;
    padding: 10px;
    font-family:monospace;
    display: block;
    margin: 10px;
    align-items: center;
    justify-content: center;
    text-align: center;
    width: 200px;
}


.blog{
    background-color: white;
    padding: 10px;
    font-size: smaller;
    font-family:monospace;
    display: block;
    margin: 10px;
    align-items: center;
    justify-content: center;
    text-align: center;
}

.headblog{
    color: rgb(0, 119, 255);
    padding: 5px;
    font-size: larger;

}

.cButton{
    color: rgb(0, 119, 255);
    height: 36px;
    left: 92%;
    top: -40%;
    position: relative;
    
}
.cButton:hover{
    cursor: pointer;
}

.modal{
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgb(0,0,0);
    background-color: rgba(0,0,0,0.4);
    justify-content: center;
    align-items: center;
}

.modal-image{
    display: block;
    margin: auto;
    width: 40%;
    justify-content: center;
    align-items: center;
}

